# bevy-game

./: Cargo.toml  ChangeLog.md  bevy-game-3077b11f20b624d.js  bevy-game-64de6ad37b9a88a6.js  index.html
.github/workflows/: ci.yml  deploy-pages.yaml  deploy-web.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
credits/: CREDITS.md
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: main.rs
