[package]
name = "bevy_game"                                       # ToDo
description = "A game developed using the Bevy engine."
version = "0.0.0"
publish = false
authors = ["Jason Ngo <jngo102@aim.com>"]
repository = "https://github.com/Ngo-Projects/bevy_game"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]
license = "MIT"
readme = "ReadMe.md"
rust-version = "1.76.0"

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "asset_processor",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    # "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi-threaded",
    "png",
    "serialize",
    "shader_format_glsl",
    "shader_format_spirv",
    "wav",
    "wayland",
    "webgl2",
    "x11",
] }
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20" }
bevy_rapier2d = { version = "0.25", features = [
    "enhanced-determinism",
    # "parallel",
    "serde-serialize",
    "wasm-bindgen",
] }
leafwing-input-manager = "0.13"
rand = { version = "0.8.3" }
webbrowser = { version = "0.8", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1"
